@@ -1,17 +1,20 @@
 package uk.gov.hmcts.reform.prl.services;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.Before;
-import org.junit.Test;
 import org.junit.jupiter.api.Assertions;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.prl.enums.FL401OrderTypeEnum;
 import uk.gov.hmcts.reform.prl.enums.Gender;
 import uk.gov.hmcts.reform.prl.enums.RelationshipsEnum;
 import uk.gov.hmcts.reform.prl.enums.YesNoDontKnow;
+import uk.gov.hmcts.reform.prl.enums.YesNoIDontKnowV2;
 import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.models.Address;
 import uk.gov.hmcts.reform.prl.models.Element;
@@ -38,25 +41,50 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Stream;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doCallRealMethod;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_CASE_TYPE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.OTHER_PEOPLE_CONFIDENTIAL_DETAILS;
 import static uk.gov.hmcts.reform.prl.enums.Gender.female;
 import static uk.gov.hmcts.reform.prl.enums.OrderTypeEnum.childArrangementsOrder;
+import static uk.gov.hmcts.reform.prl.enums.YesOrNo.No;
+import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
-@RunWith(MockitoJUnitRunner.class)
-public class ConfidentialityTabServiceTest {
+@ExtendWith(MockitoExtension.class)
+class ConfidentialityTabServiceTest {
+
+    private static final YesOrNo ADDRESS_KNOWN = Yes;
+    private static final YesOrNo ADDRESS_NOT_KNOWN = No;
+    private static final YesNoIDontKnowV2 LIVING_IN_REFUGE = YesNoIDontKnowV2.Yes;
+    private static final YesNoIDontKnowV2 NOT_LIVING_IN_REFUGE = YesNoIDontKnowV2.No;
+    private static final YesNoIDontKnowV2 DONT_KNOW_LIVING_IN_REFUGE = YesNoIDontKnowV2.IDontKnow;
+    private static final YesOrNo KEEP_ADDRESS_CONFIDENTIAL = Yes;
+    private static final YesOrNo DONT_KEEP_ADDRESS_CONFIDENTIAL = No;
+    private static final YesOrNo KEEP_EMAIL_CONFIDENTIAL = Yes;
+    private static final YesOrNo DONT_KEEP_EMAIL_CONFIDENTIAL = No;
+    private static final YesOrNo KEEP_PHONE_CONFIDENTIAL = Yes;
+    private static final YesOrNo DONT_KEEP_PHONE_CONFIDENTIAL = No;
+
+    record TestCase(YesOrNo addressKnown, YesNoIDontKnowV2 liveInRefuge, YesOrNo addressConfidential,
+                    YesOrNo emailConfidential, YesOrNo phoneConfidential,
+                    boolean expectedAddressConfidential, boolean expectedEmailConfidential, boolean expectedPhoneConfidential) {
+    }
 
     @InjectMocks
     ConfidentialityTabService confidentialityTabService;
-
-    @Mock
-    ObjectMapper objectMapper;
+    @Spy
+    ConfidentialityC8RefugeService confidentialityC8RefugeService;
 
     Address address;
     PartyDetails partyDetails1;
@@ -65,9 +93,8 @@ public class ConfidentialityTabServiceTest {
     PartyDetails refugePartyDetails1;
     PartyDetails refugePartyDetails2;
 
-    @Before
-    public void setUp() {
-
+    @BeforeEach
+    void setUp() {
         address = Address.builder()
             .addressLine1("AddressLine1")
             .postTown("Xyz town")
@@ -77,67 +104,67 @@ public class ConfidentialityTabServiceTest {
         refugePartyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .isCurrentAddressKnown(YesOrNo.Yes)
-            .canYouProvidePhoneNumber(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
-            .liveInRefuge(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .canYouProvideEmailAddress(Yes)
+            .isCurrentAddressKnown(Yes)
+            .canYouProvidePhoneNumber(Yes)
+            .isEmailAddressConfidential(Yes)
+            .liveInRefuge(YesNoIDontKnowV2.Yes)
             .build();
 
         refugePartyDetails2 = PartyDetails.builder()
             .firstName("ABC 2")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .isPhoneNumberConfidential(YesOrNo.No)
-            .isEmailAddressConfidential(YesOrNo.No)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .isCurrentAddressKnown(YesOrNo.Yes)
-            .canYouProvidePhoneNumber(YesOrNo.Yes)
+            .canYouProvideEmailAddress(No)
+            .isAddressConfidential(No)
+            .isPhoneNumberConfidential(No)
+            .isEmailAddressConfidential(No)
+            .canYouProvideEmailAddress(Yes)
+            .isCurrentAddressKnown(Yes)
+            .canYouProvidePhoneNumber(Yes)
             .phoneNumber("12345678900")
-            .liveInRefuge(YesOrNo.Yes)
+            .liveInRefuge(YesNoIDontKnowV2.Yes)
             .email("abc2@xyz.com")
             .build();
     }
 
     @Test
-    public void testApplicantConfidentialDetails() {
+    void testApplicantConfidentialDetails() {
 
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isEmailAddressConfidential(Yes)
             .build();
 
         partyDetails2 = PartyDetails.builder()
             .firstName("ABC 2")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .isPhoneNumberConfidential(YesOrNo.No)
-            .isEmailAddressConfidential(YesOrNo.No)
+            .canYouProvideEmailAddress(No)
+            .isAddressConfidential(No)
+            .isPhoneNumberConfidential(No)
+            .isEmailAddressConfidential(No)
             .phoneNumber("12345678900")
             .email("abc2@xyz.com")
             .build();
@@ -158,20 +185,20 @@ public class ConfidentialityTabServiceTest {
     }
 
     @Test
-    public void testApplicantConfidentialDetailsWhenNull() {
+    void testApplicantConfidentialDetailsWhenNull() {
 
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isEmailAddressConfidential(Yes)
             .build();
         List<Element<ApplicantConfidentialityDetails>> expectedOutput = List
             .of(Element.<ApplicantConfidentialityDetails>builder()
@@ -186,18 +213,16 @@ public class ConfidentialityTabServiceTest {
             expectedOutput,
             confidentialityTabService.getConfidentialApplicantDetails(List.of(partyDetails1))
         );
-
     }
 
-
     @Test
-    public void testChildConfidentialDetailsV2() {
+    void testChildConfidentialDetailsV2() {
 
         ChildrenAndApplicantRelation childrenAndApplicantRelation = ChildrenAndApplicantRelation.builder()
             .applicantFullName("Test")
             .childFullName("Name").childAndApplicantRelation(RelationshipsEnum.other)
             .childAndApplicantRelationOtherDetails("dsdfs")
-            .childLivesWith(YesOrNo.Yes)
+            .childLivesWith(Yes)
             .build();
 
         Element<ChildrenAndApplicantRelation> childrenAndApplicantRelationElement =
@@ -207,8 +232,8 @@ public class ConfidentialityTabServiceTest {
         ChildrenAndOtherPeopleRelation childrenAndOtherPeopleRelation = ChildrenAndOtherPeopleRelation.builder()
             .otherPeopleFullName("Ramesh Meripe")
             .childFullName("Cherry Meripe").childAndOtherPeopleRelation(RelationshipsEnum.father)
-            .childLivesWith(YesOrNo.Yes)
-            .isChildLivesWithPersonConfidential(YesOrNo.Yes)
+            .childLivesWith(Yes)
+            .isChildLivesWithPersonConfidential(Yes)
             .build();
 
         Element<ChildrenAndOtherPeopleRelation> wrappedChildrenAndOther =
@@ -233,17 +258,17 @@ public class ConfidentialityTabServiceTest {
                          .addressLine1("address")
                          .postTown("London")
                          .build())
-            .isPlaceOfBirthKnown(YesOrNo.Yes)
+            .isPlaceOfBirthKnown(Yes)
             .dateOfBirth(LocalDate.of(1999, 12, 10))
-            .canYouProvideEmailAddress(YesOrNo.Yes)
-            .canYouProvidePhoneNumber(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
+            .canYouProvidePhoneNumber(Yes)
             .dxNumber("123456")
             .gender(Gender.female)
             .email("rame@gmail.com")
             .phoneNumber("07776817131")
             .previousName("testPreviousname")
-            .isDateOfBirthKnown(YesOrNo.Yes)
-            .isCurrentAddressKnown(YesOrNo.No)
+            .isDateOfBirthKnown(Yes)
+            .isCurrentAddressKnown(No)
             .build();
 
         Element<PartyDetails> partyWrapped = Element.<PartyDetails>builder().value(partyDetails).build();
@@ -253,7 +278,7 @@ public class ConfidentialityTabServiceTest {
         ChildrenAndRespondentRelation childrenAndRespondentRelation = ChildrenAndRespondentRelation.builder()
             .respondentFullName("Test")
             .childFullName("Name").childAndRespondentRelation(RelationshipsEnum.other)
-            .childLivesWith(YesOrNo.Yes)
+            .childLivesWith(Yes)
             .childAndRespondentRelationOtherDetails("dsdfs")
             .build();
 
@@ -261,8 +286,6 @@ public class ConfidentialityTabServiceTest {
             Element.<ChildrenAndRespondentRelation>builder().value(childrenAndRespondentRelation).build();
         List<Element<ChildrenAndRespondentRelation>> childrenAndRespondentRelationList =
             Collections.singletonList(childrenAndRespondentRelationElement);
-
-
 
         CaseData caseData = CaseData.builder()
             .taskListVersion("v2")
@@ -278,20 +301,18 @@ public class ConfidentialityTabServiceTest {
                 .otherPartyInTheCaseRevised(List.of(partyWrapped))
             .build();
 
-
         assertNotNull(
             confidentialityTabService.getChildrenConfidentialDetails(caseData)
         );
     }
 
-
     @Test
-    public void testChildConfidentialDetails() {
+    void testChildConfidentialDetails() {
         OtherPersonWhoLivesWithChild personWhoLivesWithChild1 = OtherPersonWhoLivesWithChild.builder()
-            .isPersonIdentityConfidential(YesOrNo.Yes).relationshipToChildDetails("test")
+            .isPersonIdentityConfidential(Yes).relationshipToChildDetails("test")
             .firstName("Confidential First Name").lastName("Confidential Last Name").address(address).build();
         OtherPersonWhoLivesWithChild personWhoLivesWithChild2 = OtherPersonWhoLivesWithChild.builder()
-            .isPersonIdentityConfidential(YesOrNo.No).relationshipToChildDetails("test")
+            .isPersonIdentityConfidential(No).relationshipToChildDetails("test")
             .firstName("Nonconfidential test First Name").lastName("Nonconfidential test Last Name")
             .address(address).build();
 
@@ -309,7 +330,6 @@ public class ConfidentialityTabServiceTest {
             .lastName("Name")
             .personWhoLivesWithChild(listOfOtherPersonsWhoLivedWithChild)
             .build();
-
 
         List<Child> listOfChildren = Collections.singletonList(child);
         List<Element<ChildConfidentialityDetails>> expectedOutput = List.of(
@@ -335,43 +355,41 @@ public class ConfidentialityTabServiceTest {
     }
 
     @Test
-    public void testChildAndPartyConfidentialDetails() {
+    void testChildAndPartyConfidentialDetails() {
 
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isEmailAddressConfidential(Yes)
             .build();
 
         partyDetails2 = PartyDetails.builder()
             .firstName("ABC 2")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .isPhoneNumberConfidential(YesOrNo.No)
-            .isEmailAddressConfidential(YesOrNo.No)
+            .canYouProvideEmailAddress(No)
+            .isAddressConfidential(No)
+            .isPhoneNumberConfidential(No)
+            .isEmailAddressConfidential(No)
             .phoneNumber("12345678900")
             .email("abc2@xyz.com")
             .build();
 
-
-
         OtherPersonWhoLivesWithChild personWhoLivesWithChild1 = OtherPersonWhoLivesWithChild.builder()
-            .isPersonIdentityConfidential(YesOrNo.Yes).relationshipToChildDetails("test")
+            .isPersonIdentityConfidential(Yes).relationshipToChildDetails("test")
             .firstName("Confidential First Name").lastName("Confidential Last Name").address(address).build();
         OtherPersonWhoLivesWithChild personWhoLivesWithChild2 = OtherPersonWhoLivesWithChild.builder()
-            .isPersonIdentityConfidential(YesOrNo.No).relationshipToChildDetails("test")
+            .isPersonIdentityConfidential(No).relationshipToChildDetails("test")
             .firstName("Nonconfidential test First Name").lastName("Nonconfidential test Last Name")
             .address(address).build();
 
@@ -417,14 +435,13 @@ public class ConfidentialityTabServiceTest {
 
         assertTrue(stringObjectMap.containsKey("applicantsConfidentialDetails"));
         assertTrue(stringObjectMap.containsKey("childrenConfidentialDetails"));
-
     }
 
     @Test
-    public void testFl401ChildConfidentialDetails() {
+    void testFl401ChildConfidentialDetails() {
         ChildrenLiveAtAddress child = ChildrenLiveAtAddress.builder()
             .childFullName("Test")
-            .keepChildrenInfoConfidential(YesOrNo.Yes)
+            .keepChildrenInfoConfidential(Yes)
             .build();
 
         List<Element<ChildrenLiveAtAddress>> listOfChildren = Collections.singletonList(element(child));
@@ -446,7 +463,6 @@ public class ConfidentialityTabServiceTest {
                       .build())
             .build();
 
-
         assertEquals(
             expectedOutput,
             confidentialityTabService.getFl401ChildrenConfidentialDetails(caseData)
@@ -454,26 +470,53 @@ public class ConfidentialityTabServiceTest {
     }
 
     @Test
-    public void testChildAndPartyConfidentialDetailsFl401() {
+    void shouldAllowFl401KeepChildrenInfoConfidentialToBeNull() {
+        ChildrenLiveAtAddress child = ChildrenLiveAtAddress.builder()
+            .childFullName("Test")
+            .keepChildrenInfoConfidential(null)
+            .build();
+
+        List<Element<ChildrenLiveAtAddress>> listOfChildren = Collections.singletonList(element(child));
+        List<Element<Fl401ChildConfidentialityDetails>> expectedOutput = Collections.emptyList();
+
+        CaseData caseData = CaseData.builder()
+            .caseTypeOfApplication("FL401")
+            .typeOfApplicationOrders(TypeOfApplicationOrders.builder()
+                                         .orderType(List.of(FL401OrderTypeEnum.occupationOrder))
+                                         .build())
+            .home(Home.builder()
+                      .children(listOfChildren)
+                      .build())
+            .build();
+
+        List<Element<Fl401ChildConfidentialityDetails>> actualOutput =
+            confidentialityTabService.getFl401ChildrenConfidentialDetails(caseData);
+
+        // 4. Assert: No crash occurred, and the list is empty
+        assertEquals(expectedOutput, actualOutput);
+        assertTrue(actualOutput.isEmpty());
+    }
+
+    @Test
+    void testChildAndPartyConfidentialDetailsFl401() {
 
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isEmailAddressConfidential(Yes)
             .build();
-
 
         ChildrenLiveAtAddress child = ChildrenLiveAtAddress.builder()
             .childFullName("Test")
-            .keepChildrenInfoConfidential(YesOrNo.Yes)
+            .keepChildrenInfoConfidential(Yes)
             .build();
 
         Element<ChildrenLiveAtAddress> child1 = Element.<ChildrenLiveAtAddress>builder().value(
@@ -499,11 +542,10 @@ public class ConfidentialityTabServiceTest {
 
         assertTrue(stringObjectMap.containsKey("applicantsConfidentialDetails"));
         assertTrue(stringObjectMap.containsKey("fl401ChildrenConfidentialDetails"));
-
     }
 
     @Test
-    public void testApplicantConfidentialDetailsWhenNoApplicantsPresent() {
+    void testApplicantConfidentialDetailsWhenNoApplicantsPresent() {
 
         CaseData caseData = CaseData.builder()
             .applicants(null)
@@ -515,15 +557,14 @@ public class ConfidentialityTabServiceTest {
         assertTrue(stringObjectMap.containsKey("childrenConfidentialDetails"));
         assertEquals(Collections.EMPTY_LIST,stringObjectMap.get("applicantsConfidentialDetails"));
         assertEquals(Collections.EMPTY_LIST,stringObjectMap.get("childrenConfidentialDetails"));
-
     }
 
     @Test
-    public void testApplicantConfidentialDetailsWhenNoFL401ApplicantsPresent() {
+    void testApplicantConfidentialDetailsWhenNoFL401ApplicantsPresent() {
 
         ChildrenLiveAtAddress child = ChildrenLiveAtAddress.builder()
             .childFullName("Test")
-            .keepChildrenInfoConfidential(YesOrNo.Yes)
+            .keepChildrenInfoConfidential(Yes)
             .build();
 
         Element<ChildrenLiveAtAddress> child1 = Element.<ChildrenLiveAtAddress>builder().value(
@@ -548,36 +589,35 @@ public class ConfidentialityTabServiceTest {
 
         assertEquals(Collections.EMPTY_LIST,stringObjectMap.get("applicantsConfidentialDetails"));
         assertTrue(stringObjectMap.containsKey("fl401ChildrenConfidentialDetails"));
-
     }
 
     @Test
-    public void testRefugeApplicantConfidentialDetails() {
+    void testRefugeApplicantConfidentialDetails() {
 
         refugePartyDetails1 = refugePartyDetails1.toBuilder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isEmailAddressConfidential(Yes)
             .build();
 
         refugePartyDetails2 = refugePartyDetails2.toBuilder()
             .firstName("ABC 2")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.No)
-            .isAddressConfidential(YesOrNo.No)
-            .isPhoneNumberConfidential(YesOrNo.No)
-            .isEmailAddressConfidential(YesOrNo.No)
+            .canYouProvideEmailAddress(No)
+            .isAddressConfidential(No)
+            .isPhoneNumberConfidential(No)
+            .isEmailAddressConfidential(No)
             .phoneNumber("12345678900")
             .email("abc2@xyz.com")
             .build();
@@ -604,51 +644,36 @@ public class ConfidentialityTabServiceTest {
             expectedOutput,
             confidentialityTabService.getConfidentialApplicantDetails(List.of(refugePartyDetails1, refugePartyDetails2))
         );
-
     }
 
     @Test
-    public void testGetChildrenConfidentialDetailsV2() {
-        ChildrenLiveAtAddress child = ChildrenLiveAtAddress.builder()
-            .childFullName("Test")
-            .keepChildrenInfoConfidential(YesOrNo.Yes)
-            .build();
-
-        Element<ChildrenLiveAtAddress> child1 = Element.<ChildrenLiveAtAddress>builder().value(
-            child).build();
-
-        List<Element<ChildrenLiveAtAddress>> listOfChild = List.of(
-            child1
-        );
+    void testGetChildrenConfidentialDetailsV2() {
 
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isEmailAddressConfidential(Yes)
             .build();
 
         Element<PartyDetails> partyDetailsFirstRec = Element.<PartyDetails>builder().value(
             partyDetails1).build();
         List<Element<PartyDetails>> otherPartyList =  List.of(partyDetailsFirstRec);
 
-
-
         // Mock data
         ChildrenAndOtherPeopleRelation relation = ChildrenAndOtherPeopleRelation.builder()
             .childFullName("test").otherPeopleFullName("test").otherPeopleId("00000000-0000-0000-0000-000000000000")
-            .isChildLivesWithPersonConfidential(YesOrNo.Yes)
+            .isChildLivesWithPersonConfidential(Yes)
             .childAndOtherPeopleRelation(RelationshipsEnum.other)
             .otherPeopleFullName("ABC 1 XYZ 2")
             .childId("00000000-0000-0000-0000-000000000000").build();
-        PartyDetails partyDetails = mock(PartyDetails.class);
         ChildDetailsRevised childDetailsRevised = ChildDetailsRevised.builder().firstName("ChildFirstName")
             .lastName("ChildLastName").build();
 
@@ -662,55 +687,41 @@ public class ConfidentialityTabServiceTest {
         List<Element<ChildConfidentialityDetails>> result = confidentialityTabService.getChildrenConfidentialDetailsV2(caseData);
 
         // Assertions
-        Assertions.assertEquals(1, result.size());
-        ChildConfidentialityDetails details = result.get(0).getValue();
+        assertEquals(1, result.size());
+        ChildConfidentialityDetails details = result.getFirst().getValue();
         assertEquals("ChildFirstName", details.getFirstName());
         assertEquals("ChildLastName", details.getLastName());
         assertEquals(1, details.getOtherPerson().size());
     }
 
     @Test
-    public void testGetChildrenConfidentialDetailsV2_scenario2() {
-        ChildrenLiveAtAddress child = ChildrenLiveAtAddress.builder()
-            .childFullName("Test")
-            .keepChildrenInfoConfidential(YesOrNo.Yes)
-            .build();
-
-        Element<ChildrenLiveAtAddress> child1 = Element.<ChildrenLiveAtAddress>builder().value(
-            child).build();
-
-        List<Element<ChildrenLiveAtAddress>> listOfChild = List.of(
-            child1
-        );
+    void testGetChildrenConfidentialDetailsV2_scenario2() {
 
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isEmailAddressConfidential(Yes)
             .build();
 
         Element<PartyDetails> partyDetailsFirstRec = Element.<PartyDetails>builder().value(
             partyDetails1).build();
         List<Element<PartyDetails>> otherPartyList =  List.of(partyDetailsFirstRec);
 
-
-
         // Mock data
         ChildrenAndOtherPeopleRelation relation = ChildrenAndOtherPeopleRelation.builder()
             .childFullName("test").otherPeopleFullName("test").otherPeopleId("00000000-0000-0000-0000-000000000000")
-            .isChildLivesWithPersonConfidential(YesOrNo.No)
+            .isChildLivesWithPersonConfidential(No)
             .childAndOtherPeopleRelation(RelationshipsEnum.other)
             .otherPeopleFullName("ABC 1 XYZ 2")
             .childId("00000000-0000-0000-0000-000000000000").build();
-        PartyDetails partyDetails = mock(PartyDetails.class);
         ChildDetailsRevised childDetailsRevised = ChildDetailsRevised.builder().firstName("ChildFirstName")
             .lastName("ChildLastName").build();
 
@@ -724,15 +735,15 @@ public class ConfidentialityTabServiceTest {
         List<Element<ChildConfidentialityDetails>> result = confidentialityTabService.getChildrenConfidentialDetailsV2(caseData);
 
         // Assertions
-        Assertions.assertEquals(0, result.size());
+        assertEquals(0, result.size());
     }
 
     @Test
-    public void testUpdateOtherPeopleConfidentiality_withConfidentialRelations() {
+    void testUpdateOtherPeopleConfidentiality_withConfidentialRelations() {
         // Mock data
         ChildrenAndOtherPeopleRelation relation = ChildrenAndOtherPeopleRelation.builder()
             .childFullName("test").otherPeopleFullName("test").otherPeopleId("00000000-0000-0000-0000-000000000000")
-            .isChildLivesWithPersonConfidential(YesOrNo.Yes)
+            .isChildLivesWithPersonConfidential(Yes)
             .childAndOtherPeopleRelation(RelationshipsEnum.other)
             .otherPeopleFullName("ABC 1 XYZ 2")
             .childId("00000000-0000-0000-0000-000000000000").build();
@@ -740,15 +751,15 @@ public class ConfidentialityTabServiceTest {
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isEmailAddressConfidential(Yes)
             .build();
 
         Element<PartyDetails> partyDetailsFirstRec = Element.<PartyDetails>builder().id(UUID.fromString(
@@ -762,19 +773,25 @@ public class ConfidentialityTabServiceTest {
         List<Element<PartyDetails>> result = confidentialityTabService.updateOtherPeopleConfidentiality(relations, otherPartyList);
 
         // Assertions
-        Assertions.assertEquals(1, result.size());
-        PartyDetails updatedPartyDetails = result.get(0).getValue();
-        Assertions.assertEquals(YesOrNo.Yes, updatedPartyDetails.getIsAddressConfidential());
-        Assertions.assertEquals(YesOrNo.Yes, updatedPartyDetails.getIsPhoneNumberConfidential());
-        Assertions.assertEquals(YesOrNo.Yes, updatedPartyDetails.getIsEmailAddressConfidential());
+        assertEquals(1, result.size());
+        PartyDetails updatedPartyDetails = result.getFirst().getValue();
+        assertEquals(Yes, updatedPartyDetails.getIsAddressConfidential());
+        assertEquals(Yes, updatedPartyDetails.getIsPhoneNumberConfidential());
+        assertEquals(Yes, updatedPartyDetails.getIsEmailAddressConfidential());
+
+        verifyNoInteractions(confidentialityC8RefugeService);
     }
 
-    @Test
-    public void testUpdateOtherPeopleConfidentiality_withoutConfidentialRelations() {
+    @ParameterizedTest
+    @MethodSource("confidentialFields")
+    void testUpdateOtherPeopleConfidentiality_withoutConfidentialRelations(ConfidentialityTabService.ConfidentialFields confidentialFields) {
+        doCallRealMethod().when(confidentialityC8RefugeService)
+            .updateConfidentialityForPartiesLivingInRefuge(anyString(), any(PartyDetails.class), any(Boolean.class));
+
         // Mock data
         ChildrenAndOtherPeopleRelation relation = ChildrenAndOtherPeopleRelation.builder()
             .childFullName("test").otherPeopleFullName("test").otherPeopleId("00000000-0000-0000-0000-000000000000")
-            .isChildLivesWithPersonConfidential(YesOrNo.No)
+            .isChildLivesWithPersonConfidential(No)
             .childAndOtherPeopleRelation(RelationshipsEnum.other)
             .otherPeopleFullName("ABC 1 XYZ 2")
             .childId("00000000-0000-0000-0000-000000000000").build();
@@ -782,15 +799,15 @@ public class ConfidentialityTabServiceTest {
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(confidentialFields.address() ? Yes : No)
+            .isPhoneNumberConfidential(confidentialFields.phoneNumber() ? Yes : No)
+            .isEmailAddressConfidential(confidentialFields.emailAddress() ? Yes : No)
             .build();
 
         Element<PartyDetails> partyDetailsFirstRec = Element.<PartyDetails>builder().id(UUID.fromString(
@@ -804,28 +821,40 @@ public class ConfidentialityTabServiceTest {
         List<Element<PartyDetails>> result = confidentialityTabService.updateOtherPeopleConfidentiality(relations, otherPartyList);
 
         // Assertions
-        Assertions.assertEquals(1, result.size());
-        PartyDetails updatedPartyDetails = result.get(0).getValue();
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsAddressConfidential());
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsPhoneNumberConfidential());
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsEmailAddressConfidential());
+        assertEquals(1, result.size());
+        PartyDetails updatedPartyDetails = result.getFirst().getValue();
+        verifyConfidentialFields(updatedPartyDetails, confidentialFields);
     }
 
-    @Test
-    public void testUpdateOtherPeopleConfidentiality_withEmptyRelations() {
+    private static Stream<Arguments> confidentialFields() {
+        return Stream.of(
+            Arguments.of(new ConfidentialityTabService.ConfidentialFields(true, true, true)),
+            Arguments.of(new ConfidentialityTabService.ConfidentialFields(true, false, true)),
+            Arguments.of(new ConfidentialityTabService.ConfidentialFields(true, true, false)),
+            Arguments.of(new ConfidentialityTabService.ConfidentialFields(true, false, false)),
+            Arguments.of(new ConfidentialityTabService.ConfidentialFields(false, false, false))
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("confidentialFields")
+    void testUpdateOtherPeopleConfidentiality_withEmptyRelations(ConfidentialityTabService.ConfidentialFields confidentialFields) {
+        doCallRealMethod().when(confidentialityC8RefugeService)
+            .updateConfidentialityForPartiesLivingInRefuge(anyString(), any(PartyDetails.class), any(Boolean.class));
+
         // Mock data
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(confidentialFields.address() ? Yes : No)
+            .isPhoneNumberConfidential(confidentialFields.phoneNumber() ? Yes : No)
+            .isEmailAddressConfidential(confidentialFields.emailAddress() ? Yes : No)
             .build();
 
         Element<PartyDetails> partyDetailsFirstRec = Element.<PartyDetails>builder().value(
@@ -838,28 +867,37 @@ public class ConfidentialityTabServiceTest {
         List<Element<PartyDetails>> result = confidentialityTabService.updateOtherPeopleConfidentiality(relations, otherPartyList);
 
         // Assertions
-        Assertions.assertEquals(1, result.size());
-        PartyDetails updatedPartyDetails = result.get(0).getValue();
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsAddressConfidential());
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsPhoneNumberConfidential());
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsEmailAddressConfidential());
+        assertEquals(1, result.size());
+        PartyDetails updatedPartyDetails = result.getFirst().getValue();
+        verifyConfidentialFields(updatedPartyDetails, confidentialFields);
     }
 
-    @Test
-    public void testUpdateOtherPeopleConfidentiality_withNullRelations() {
+    private void verifyConfidentialFields(PartyDetails partyDetails,
+                                          ConfidentialityTabService.ConfidentialFields confidentialFields) {
+        assertEquals(confidentialFields.address(), Yes.equals(partyDetails.getIsAddressConfidential()));
+        assertEquals(confidentialFields.phoneNumber(), Yes.equals(partyDetails.getIsPhoneNumberConfidential()));
+        assertEquals(confidentialFields.emailAddress(), Yes.equals(partyDetails.getIsEmailAddressConfidential()));
+    }
+
+    @ParameterizedTest
+    @MethodSource("confidentialFields")
+    void testUpdateOtherPeopleConfidentiality_withNullRelations(ConfidentialityTabService.ConfidentialFields confidentialFields) {
+        doCallRealMethod().when(confidentialityC8RefugeService)
+            .updateConfidentialityForPartiesLivingInRefuge(anyString(), any(PartyDetails.class), any(Boolean.class));
+
         // Mock data
         partyDetails1 = PartyDetails.builder()
             .firstName("ABC 1")
             .lastName("XYZ 2")
-            .dateOfBirth(LocalDate.of(2000, 01, 01))
+            .dateOfBirth(LocalDate.of(2000, 1, 1))
             .gender(Gender.male)
             .address(address)
-            .canYouProvideEmailAddress(YesOrNo.Yes)
+            .canYouProvideEmailAddress(Yes)
             .email("abc1@xyz.com")
             .phoneNumber("09876543211")
-            .isAddressConfidential(YesOrNo.Yes)
-            .isPhoneNumberConfidential(YesOrNo.Yes)
-            .isEmailAddressConfidential(YesOrNo.Yes)
+            .isAddressConfidential(confidentialFields.address() ? Yes : No)
+            .isPhoneNumberConfidential(confidentialFields.phoneNumber() ? Yes : No)
+            .isEmailAddressConfidential(confidentialFields.emailAddress() ? Yes : No)
             .build();
 
         Element<PartyDetails> partyDetailsFirstRec = Element.<PartyDetails>builder().value(
@@ -870,15 +908,13 @@ public class ConfidentialityTabServiceTest {
         List<Element<PartyDetails>> result = confidentialityTabService.updateOtherPeopleConfidentiality(null, otherPartyList);
 
         // Assertions
-        Assertions.assertEquals(1, result.size());
-        PartyDetails updatedPartyDetails = result.get(0).getValue();
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsAddressConfidential());
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsPhoneNumberConfidential());
-        Assertions.assertEquals(YesOrNo.No, updatedPartyDetails.getIsEmailAddressConfidential());
+        assertEquals(1, result.size());
+        PartyDetails updatedPartyDetails = result.getFirst().getValue();
+        verifyConfidentialFields(updatedPartyDetails, confidentialFields);
     }
 
     @Test
-    public void testUpdateOtherPeopleConfidentiality_withNullOtherPartyList() {
+    void testUpdateOtherPeopleConfidentiality_withNullOtherPartyList() {
         // Mock data
         ChildrenAndOtherPeopleRelation relation = mock(ChildrenAndOtherPeopleRelation.class);
 
@@ -891,5 +927,117 @@ public class ConfidentialityTabServiceTest {
         Assertions.assertNull(result);
     }
 
+    @ParameterizedTest
+    @MethodSource
+    void givenCurrentAddressKnown_whenUpdateConfidentialityDetails_thenReturnsUpdatedDetails(TestCase testCase) {
+        Address address = Address.builder()
+            .addressLine1("742 Evergreen Terrace")
+            .build();
 
+        CaseData caseData = CaseData.builder()
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .otherPartyInTheCaseRevised(List.of(Element.<PartyDetails>builder().value(
+                PartyDetails.builder()
+                    .isCurrentAddressKnown(testCase.addressKnown)
+                    .liveInRefuge(testCase.liveInRefuge)
+                    .address(address)
+                    .isAddressConfidential(testCase.addressConfidential)
+                    .email("otherparty@hmcts.net")
+                    .isEmailAddressConfidential(testCase.emailConfidential)
+                    .phoneNumber("01536504322")
+                    .isPhoneNumberConfidential(testCase.phoneConfidential)
+                    .build()).build()))
+            .build();
+
+        Map<String, Object> result = confidentialityTabService.updateConfidentialityDetails(caseData);
+
+        var otherPeopleConfidentialDetails = (List<Element<ApplicantConfidentialityDetails>>) result
+            .get(OTHER_PEOPLE_CONFIDENTIAL_DETAILS);
+
+        if (!testCase.expectedAddressConfidential && !testCase.expectedEmailConfidential && !testCase.expectedPhoneConfidential) {
+            assertThat(otherPeopleConfidentialDetails).isEmpty();
+        } else {
+            assertThat(otherPeopleConfidentialDetails).hasSize(1);
+            ApplicantConfidentialityDetails otherPeopleDetails = otherPeopleConfidentialDetails.getFirst().getValue();
+
+            if (testCase.expectedAddressConfidential) {
+                assertThat(otherPeopleDetails.getAddress()).isEqualTo(address);
+            } else {
+                assertThat(otherPeopleDetails.getAddress()).isNull();
+            }
+            if  (testCase.expectedEmailConfidential) {
+                assertThat(otherPeopleDetails.getEmail()).isEqualTo("otherparty@hmcts.net");
+            } else {
+                assertThat(otherPeopleDetails.getEmail()).isNull();
+            }
+            if (testCase.expectedPhoneConfidential) {
+                assertThat(otherPeopleDetails.getPhoneNumber()).isEqualTo("01536504322");
+            } else {
+                assertThat(otherPeopleDetails.getPhoneNumber()).isNull();
+            }
+        }
+    }
+
+    static Stream<Arguments> givenCurrentAddressKnown_whenUpdateConfidentialityDetails_thenReturnsUpdatedDetails() {
+        return Stream.of(
+            // Living in a refuge should always keep all details confidential
+            Arguments.of(new TestCase(ADDRESS_KNOWN, LIVING_IN_REFUGE, null, null, null, true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL, null, null, true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, LIVING_IN_REFUGE, null, DONT_KEEP_EMAIL_CONFIDENTIAL, null, true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, LIVING_IN_REFUGE, null, null, DONT_KEEP_PHONE_CONFIDENTIAL, true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, LIVING_IN_REFUGE, null, DONT_KEEP_EMAIL_CONFIDENTIAL, null, true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, LIVING_IN_REFUGE, null, null, DONT_KEEP_PHONE_CONFIDENTIAL, true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, LIVING_IN_REFUGE, null, DONT_KEEP_EMAIL_CONFIDENTIAL,
+                                      DONT_KEEP_PHONE_CONFIDENTIAL, true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, LIVING_IN_REFUGE, null, null, null, true, true, true)),
+
+            // Not living in a refuge should keep details confidential based on the respective UI inputs
+            Arguments.of(new TestCase(ADDRESS_KNOWN, NOT_LIVING_IN_REFUGE, KEEP_ADDRESS_CONFIDENTIAL,
+                                      DONT_KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  true, false, false)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, NOT_LIVING_IN_REFUGE, KEEP_ADDRESS_CONFIDENTIAL,
+                                      KEEP_EMAIL_CONFIDENTIAL, KEEP_PHONE_CONFIDENTIAL,  true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, NOT_LIVING_IN_REFUGE, KEEP_ADDRESS_CONFIDENTIAL,
+                                      KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  true, true, false)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, NOT_LIVING_IN_REFUGE, KEEP_ADDRESS_CONFIDENTIAL,
+                                      DONT_KEEP_EMAIL_CONFIDENTIAL, KEEP_PHONE_CONFIDENTIAL,  true, false, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, NOT_LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL,
+                                      DONT_KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  false, false, false)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, NOT_LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL,
+                                      KEEP_EMAIL_CONFIDENTIAL, KEEP_PHONE_CONFIDENTIAL,  false, true, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, NOT_LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL,
+                                      KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  false, true, false)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, NOT_LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL,
+                                      DONT_KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  false, false, false)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, NOT_LIVING_IN_REFUGE, null, KEEP_EMAIL_CONFIDENTIAL,
+                                      KEEP_PHONE_CONFIDENTIAL, false, true, true)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, NOT_LIVING_IN_REFUGE, null, DONT_KEEP_EMAIL_CONFIDENTIAL,
+                                      KEEP_PHONE_CONFIDENTIAL, false, false, true)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, NOT_LIVING_IN_REFUGE, null, DONT_KEEP_EMAIL_CONFIDENTIAL,
+                                      DONT_KEEP_PHONE_CONFIDENTIAL, false, false, false)),
+
+            // Living in a refuge - don't know should keep details confidential based on the respective UI inputs
+            Arguments.of(new TestCase(ADDRESS_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, KEEP_ADDRESS_CONFIDENTIAL,
+                                      DONT_KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  true, false, false)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, KEEP_ADDRESS_CONFIDENTIAL,
+                                      KEEP_EMAIL_CONFIDENTIAL, KEEP_PHONE_CONFIDENTIAL,  true, true, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, KEEP_ADDRESS_CONFIDENTIAL,
+                                      KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  true, true, false)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, KEEP_ADDRESS_CONFIDENTIAL,
+                                      DONT_KEEP_EMAIL_CONFIDENTIAL, KEEP_PHONE_CONFIDENTIAL,  true, false, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL,
+                                      DONT_KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  false, false, false)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL,
+                                      KEEP_EMAIL_CONFIDENTIAL, KEEP_PHONE_CONFIDENTIAL,  false, true, true)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL,
+                                      KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  false, true, false)),
+            Arguments.of(new TestCase(ADDRESS_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, DONT_KEEP_ADDRESS_CONFIDENTIAL,
+                                      DONT_KEEP_EMAIL_CONFIDENTIAL, DONT_KEEP_PHONE_CONFIDENTIAL,  false, false, false)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, null, KEEP_EMAIL_CONFIDENTIAL,
+                                      KEEP_PHONE_CONFIDENTIAL, false, true, true)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, null, DONT_KEEP_EMAIL_CONFIDENTIAL,
+                                      KEEP_PHONE_CONFIDENTIAL, false, false, true)),
+            Arguments.of(new TestCase(ADDRESS_NOT_KNOWN, DONT_KNOW_LIVING_IN_REFUGE, null, DONT_KEEP_EMAIL_CONFIDENTIAL,
+                                      DONT_KEEP_PHONE_CONFIDENTIAL, false, false, false))
+        );
+    }
 }
